git commit -m "Add role type in authentication manager object"